* 0.12.3-1
 - bugfix livestream restart (kodi <19 only)

* 0.12.3
 - service api fixes (auth & restart)
 - minor logging improvements

* 0.12.1
- fixed schedule error (serviceapi) #102

* 0.12.0
- added drm livestream playback

* 0.11.1
- fixed broken livestreams for serviceapi (kodi matrix only)

* 0.11.0
- kodi v19 support (older versions have to use 0.10.X for now)

* 0.10.3
- fixed broken livestream when "bundesland heute" videos are available

* 0.10.2
- tvthek added new quality strings. caused error on full hd setting

* 0.10.1
- fixed kodi crash when using the playlist listitem

* 0.10.0
- python2/3 compatible
- added 'play full video' for htmlscraper
- show listitems are absolute now and can be added to favourites
- minor fixes for serviceapi & htmlscraper

0.9.2
- fixed frontpage (new html markup)
- removed 'im fokus' & 'orf tipps'
- changed url to https for the htmlscraper

0.9.1
- optimized live stream option for serviceapi (Issue #83)
- removed scheduled livestream because it results in an endless loop of dialog boxes (serviceapi)

0.9.0
- fixed htmlscraper (new orf tvthek website structure)
- "Im Fokus" added for the htmlscraper
- "TV Programm" added for the htmlscraper
- New icons/backdrops according to the new CI

0.8.8
- removed stream method option because its not available with the htmlscraper. Progressive streaming can still be used with the serviceAPI.

0.8.7
- another fix for the restart option

0.8.6
- fixed restart option

0.8.5
- added UHD livestream option
- added Adaptive quality settings
- fixed "play all" item (issue #66)
- fixed "Bundesland Heute" livestream listing for the htmlscraper

0.8.4
- reverted playall fix because it resulted in a kodi crash (htmlscraper)

0.8.3
- fixed: don't set directory=true on the "play all" listitem (thx @wsnipex)
- cleanup (thx @rechi)

0.8.2
- fixed 403 errors caused by uncommon UA

0.8.1
- fixed issue #56: db entries for the addon now start with plugin://

0.8.0