@@ -1,5 +1,7 @@
 * 0.12.3-1
  - bugfix livestream restart (kodi <19 only)
+ - removed quality setting
+ - livestream active bugfix
 
 * 0.12.3
  - service api fixes (auth & restart)
